--- a/My Work.ipynb
+++ b/My Work.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "Honour Code\n",
-    "I Chibuikem, Mbonu, confirm - by submitting this document - that the solutions in this notebook are a result of my own work and that I abide by the EDSA honour code. Non-compliance with the honour code constitutes a material breach of contract.\n",
+    "I **CHIBUIKEM, MBONU**, confirm - by submitting this document - that the solutions in this notebook are a result of my own work and that I abide by the EDSA honour code. Non-compliance with the honour code constitutes a material breach of contract.\n",
     "\n",
     "Exam Overview: Language Identification Analysis 2022\n",
     "South Africa is a multicultural society that is characterised by its rich linguistic diversity. Language is an indispensable tool that can be used to deepen democracy and also contribute to the social, cultural, intellectual, economic and political life of the South African society.\n",
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e57963b3",
+   "id": "20ebcf18",
    "metadata": {},
    "source": [
     "An f1_score of 0.99 was gotten from the prediction made on the unseen test data during splitting\n"
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61f100f4",
+   "id": "2ed9714c",
    "metadata": {},
    "source": [
     "When making predictions on the test set, any data cleaning, feature engineering, feature preprocessing and transformation performed on the train data before fitting it to a model would also be performed on the test data"
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83d8726e",
+   "id": "243ee3da",
    "metadata": {},
    "source": [
     "Unlike the train data where the text column was initially fitted and transformed by the CountVectorizer, the text column for the test_set data would only be transformed  by CountVectorizer object "
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3ffa005",
+   "id": "c09a2ab2",
    "metadata": {},
    "source": [
     "Making prediction for the test_set"
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3399468c",
+   "id": "c112dc01",
    "metadata": {},
    "source": [
     "The above cell shows the prediction the naive_bayes model made in terms of classifying the text in the test_set data to its respective classes of languages "
