--- a/My Work.ipynb
+++ b/My Work.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 61,
    "id": "a9b95d37",
    "metadata": {},
    "outputs": [],
@@ -34,19 +34,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e623f417",
+   "metadata": {},
+   "source": [
+    "## Loading Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 62,
    "id": "9a2569f1",
    "metadata": {},
    "outputs": [],
    "source": [
     "#loading of the train data set\n",
-    "train = pd.read_csv('train_set.csv')"
+    "train = pd.read_csv('train_set.csv')\n",
+    "test = pd.read_csv('train_set.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 63,
    "id": "8caccec9",
    "metadata": {},
    "outputs": [
@@ -114,7 +123,7 @@
        "4     ven  khomishini ya ndinganyiso ya mbeu yo ewa maana..."
       ]
      },
-     "execution_count": 46,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 64,
    "id": "7c7d0a6f",
    "metadata": {},
    "outputs": [],
@@ -155,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 65,
    "id": "b70fcd24",
    "metadata": {},
    "outputs": [
@@ -223,7 +232,7 @@
        "4        8  khomishini ya ndinganyiso ya mbeu yo ewa maana..."
       ]
      },
-     "execution_count": 48,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,8 +250,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c2d1092b",
+   "metadata": {},
+   "source": [
+    "## Text Data Preprocessing"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 66,
    "id": "098399ea",
    "metadata": {},
    "outputs": [],
@@ -255,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 67,
    "id": "490e0934",
    "metadata": {},
    "outputs": [],
@@ -267,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 68,
    "id": "c5600521",
    "metadata": {},
    "outputs": [],
@@ -276,8 +293,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ee10bd91",
+   "metadata": {},
+   "source": [
+    "## Modeling"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 69,
    "id": "724c7b4b",
    "metadata": {},
    "outputs": [],
@@ -290,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 70,
    "id": "8290f6ad",
    "metadata": {},
    "outputs": [],
@@ -301,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 71,
    "id": "8f2c9a60",
    "metadata": {},
    "outputs": [
@@ -332,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 72,
    "id": "060b3d12",
    "metadata": {},
    "outputs": [
@@ -400,7 +425,7 @@
        "4      5                      Winste op buitelandse valuta."
       ]
      },
-     "execution_count": 36,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 73,
    "id": "f17403fb",
    "metadata": {},
    "outputs": [],
@@ -439,8 +464,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a0580814",
+   "metadata": {},
+   "source": [
+    "## Model Performance"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 74,
    "id": "7cd86dc0",
    "metadata": {},
    "outputs": [],
@@ -458,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 75,
    "id": "852efc88",
    "metadata": {},
    "outputs": [],
@@ -469,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 76,
    "id": "5267ec9c",
    "metadata": {},
    "outputs": [],
@@ -480,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 77,
    "id": "3b162cb6",
    "metadata": {},
    "outputs": [
@@ -548,7 +581,7 @@
        "4      5     afr"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,8 +600,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4ebb96ab",
+   "metadata": {},
+   "source": [
+    "## Submission"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 78,
    "id": "ecdea7cd",
    "metadata": {},
    "outputs": [],
@@ -578,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 79,
    "id": "c0e7a0db",
    "metadata": {},
    "outputs": [
@@ -685,7 +726,7 @@
        "[5682 rows x 2 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
